# gonet-utils

./: .gitignore  NOTES.md  README.md  pyproject.toml
scripts/: capture  capture.sh  darks.sh  flats.sh  lica  measure  measure.sh  multi_capture  multi_capture.sh  multi_dark.sh  multi_gain  multi_spectral  photo.sh  spectral
src/gonetutils/: _version.py  exposure.py  image.py  logger.py  main.py  roi.py  stats.py
src/gonetutils/util/: cli.py  misc.py  mpl.py  plot.py  rawimage.py
