[build-system]
requires = ["setuptools >= 45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gonet-utils"
dynamic = ["version"]
description = "Tools to aid spectral charatcerization of HQ Raspberry Pi camera"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Rafael González", email = "rafael08@ucm.es"},
]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    'Topic :: Scientific/Engineering :: Atmospheric Science',
]
dependencies = [
    "numpy",
    "exifread",
    "rawpy",
]

[project.optional-dependencies]
test = [
    "pytest>=6",
]

[project.urls]
Homepage = "https://github.com/astrorafael/gonet-utils"
Repository = "https://github.com/astrorafael/gonet-utils.git"

[project.scripts]
gonet-logger = "gonetutils.logger:main"
gonet-stats = "gonetutils.stats:main"
gonet-exposure = "gonetutils.exposure:main"

[tool.setuptools]
script-files = [
    "scripts/photo.sh",
    "scripts/darks.sh",
    "scripts/flats.sh"
]

# pyproject.toml
[tool.setuptools_scm]
write_to = "src/gonetutils/_version.py"

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true
where = ["src"]
